parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    VAR_BOOL

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LBRACE statement_list RBRACE
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> expression_statement
Rule 5     statement -> declaration_statement
Rule 6     statement -> assignment_statement
Rule 7     statement -> print_statement
Rule 8     statement -> if_statement
Rule 9     statement -> while_statement
Rule 10    statement -> for_statement
Rule 11    declaration_statement -> type declaration_list SEMICOLON
Rule 12    declaration_list -> declaration_item
Rule 13    declaration_list -> declaration_list COMA declaration_item
Rule 14    declaration_item -> ID
Rule 15    declaration_item -> ID ASSIGN expression
Rule 16    declaration_item -> ID LBRACKET expression RBRACKET ASSIGN array_initialization
Rule 17    declaration_item -> ID LBRACKET expression RBRACKET
Rule 18    declaration_item -> ID ASSIGN array_initialization
Rule 19    array_initialization -> LBRACKET int_list RBRACKET
Rule 20    int_list -> VAR_INT
Rule 21    int_list -> int_list COMA VAR_INT
Rule 22    expression_list -> expression
Rule 23    expression_list -> expression_list COMA expression
Rule 24    assignment_statement -> ID ASSIGN expression SEMICOLON
Rule 25    assignment_statement -> ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
Rule 26    expression_statement -> expression SEMICOLON
Rule 27    print_statement -> WRITELN LPAREN expression_list RPAREN SEMICOLON
Rule 28    print_statement -> WRITE LPAREN expression_list RPAREN SEMICOLON
Rule 29    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_if_list
Rule 30    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_if_list ELSE LBRACE statement_list RBRACE
Rule 31    else_if_list -> else_if_list ELSE IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 32    else_if_list -> ELSE IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 33    while_statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 34    for_statement -> FOR LPAREN assignment_statement expression SEMICOLON expression RPAREN LBRACE statement_list RBRACE
Rule 35    expression -> expression PLUSPLUS
Rule 36    expression -> expression MINUSMINUS
Rule 37    expression -> PLUSPLUS expression
Rule 38    expression -> MINUSMINUS expression
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression LT expression
Rule 44    expression -> expression GT expression
Rule 45    expression -> expression LTE expression
Rule 46    expression -> expression GTE expression
Rule 47    expression -> expression EQ expression
Rule 48    expression -> expression NE expression
Rule 49    expression -> expression AND expression
Rule 50    expression -> expression OR expression
Rule 51    expression -> NOT expression
Rule 52    expression -> LPAREN expression RPAREN
Rule 53    expression -> VAR_INT
Rule 54    expression -> VAR_FLOAT
Rule 55    expression -> STRING
Rule 56    expression -> ID
Rule 57    expression -> TRUE
Rule 58    expression -> FALSE
Rule 59    type -> INT
Rule 60    type -> FLOAT
Rule 61    type -> BOOL
Rule 62    type -> STRING
Rule 63    type -> INT LBRACKET RBRACKET

Terminals, with rules where they appear

AND                  : 49
ASSIGN               : 15 16 18 24 25
BOOL                 : 61
COMA                 : 13 21 23
DIVIDE               : 42
ELSE                 : 30 31 32
EQ                   : 47
FALSE                : 58
FLOAT                : 60
FOR                  : 34
GT                   : 44
GTE                  : 46
ID                   : 1 14 15 16 17 18 24 25 56
IF                   : 29 30 31 32
INT                  : 59 63
LBRACE               : 1 29 30 30 31 32 33 34
LBRACKET             : 16 17 19 25 63
LPAREN               : 27 28 29 30 31 32 33 34 52
LT                   : 43
LTE                  : 45
MINUS                : 40
MINUSMINUS           : 36 38
NE                   : 48
NOT                  : 51
OR                   : 50
PLUS                 : 39
PLUSPLUS             : 35 37
PROGRAM              : 1
RBRACE               : 1 29 30 30 31 32 33 34
RBRACKET             : 16 17 19 25 63
RPAREN               : 27 28 29 30 31 32 33 34 52
SEMICOLON            : 11 24 25 26 27 28 34
STRING               : 55 62
TIMES                : 41
TRUE                 : 57
VAR_BOOL             : 
VAR_FLOAT            : 54
VAR_INT              : 20 21 53
WHILE                : 33
WRITE                : 28
WRITELN              : 27
error                : 

Nonterminals, with rules where they appear

array_initialization : 16 18
assignment_statement : 6 34
declaration_item     : 12 13
declaration_list     : 11 13
declaration_statement : 5
else_if_list         : 29 30 31
expression           : 15 16 17 22 23 24 25 25 26 29 30 31 32 33 34 34 35 36 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52
expression_list      : 23 27 28
expression_statement : 4
for_statement        : 10
if_statement         : 8
int_list             : 19 21
print_statement      : 7
program              : 0
statement            : 2 3
statement_list       : 1 3 29 30 30 31 32 33 34
type                 : 11
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LBRACE statement_list RBRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LBRACE statement_list RBRACE

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 4


state 4

    (1) program -> PROGRAM ID LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . expression_statement
    (5) statement -> . declaration_statement
    (6) statement -> . assignment_statement
    (7) statement -> . print_statement
    (8) statement -> . if_statement
    (9) statement -> . while_statement
    (10) statement -> . for_statement
    (26) expression_statement -> . expression SEMICOLON
    (11) declaration_statement -> . type declaration_list SEMICOLON
    (24) assignment_statement -> . ID ASSIGN expression SEMICOLON
    (25) assignment_statement -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (27) print_statement -> . WRITELN LPAREN expression_list RPAREN SEMICOLON
    (28) print_statement -> . WRITE LPAREN expression_list RPAREN SEMICOLON
    (29) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_if_list
    (30) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_if_list ELSE LBRACE statement_list RBRACE
    (33) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (34) for_statement -> . FOR LPAREN assignment_statement expression SEMICOLON expression RPAREN LBRACE statement_list RBRACE
    (35) expression -> . expression PLUSPLUS
    (36) expression -> . expression MINUSMINUS
    (37) expression -> . PLUSPLUS expression
    (38) expression -> . MINUSMINUS expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression LT expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . VAR_INT
    (54) expression -> . VAR_FLOAT
    (55) expression -> . STRING
    (56) expression -> . ID
    (57) expression -> . TRUE
    (58) expression -> . FALSE
    (59) type -> . INT
    (60) type -> . FLOAT
    (61) type -> . BOOL
    (62) type -> . STRING
    (63) type -> . INT LBRACKET RBRACKET

    ID              shift and go to state 5
    WRITELN         shift and go to state 17
    WRITE           shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    PLUSPLUS        shift and go to state 23
    MINUSMINUS      shift and go to state 24
    NOT             shift and go to state 25
    LPAREN          shift and go to state 18
    VAR_INT         shift and go to state 26
    VAR_FLOAT       shift and go to state 27
    STRING          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    BOOL            shift and go to state 33

    statement_list                 shift and go to state 6
    statement                      shift and go to state 7
    expression_statement           shift and go to state 8
    declaration_statement          shift and go to state 9
    assignment_statement           shift and go to state 10
    print_statement                shift and go to state 11
    if_statement                   shift and go to state 12
    while_statement                shift and go to state 13
    for_statement                  shift and go to state 14
    expression                     shift and go to state 15
    type                           shift and go to state 16

state 5

    (24) assignment_statement -> ID . ASSIGN expression SEMICOLON
    (25) assignment_statement -> ID . LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (56) expression -> ID .

    ASSIGN          shift and go to state 34
    LBRACKET        shift and go to state 35
    SEMICOLON       reduce using rule 56 (expression -> ID .)
    PLUSPLUS        reduce using rule 56 (expression -> ID .)
    MINUSMINUS      reduce using rule 56 (expression -> ID .)
    PLUS            reduce using rule 56 (expression -> ID .)
    MINUS           reduce using rule 56 (expression -> ID .)
    TIMES           reduce using rule 56 (expression -> ID .)
    DIVIDE          reduce using rule 56 (expression -> ID .)
    LT              reduce using rule 56 (expression -> ID .)
    GT              reduce using rule 56 (expression -> ID .)
    LTE             reduce using rule 56 (expression -> ID .)
    GTE             reduce using rule 56 (expression -> ID .)
    EQ              reduce using rule 56 (expression -> ID .)
    NE              reduce using rule 56 (expression -> ID .)
    AND             reduce using rule 56 (expression -> ID .)
    OR              reduce using rule 56 (expression -> ID .)


state 6

    (1) program -> PROGRAM ID LBRACE statement_list . RBRACE
    (3) statement_list -> statement_list . statement
    (4) statement -> . expression_statement
    (5) statement -> . declaration_statement
    (6) statement -> . assignment_statement
    (7) statement -> . print_statement
    (8) statement -> . if_statement
    (9) statement -> . while_statement
    (10) statement -> . for_statement
    (26) expression_statement -> . expression SEMICOLON
    (11) declaration_statement -> . type declaration_list SEMICOLON
    (24) assignment_statement -> . ID ASSIGN expression SEMICOLON
    (25) assignment_statement -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (27) print_statement -> . WRITELN LPAREN expression_list RPAREN SEMICOLON
    (28) print_statement -> . WRITE LPAREN expression_list RPAREN SEMICOLON
    (29) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_if_list
    (30) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_if_list ELSE LBRACE statement_list RBRACE
    (33) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (34) for_statement -> . FOR LPAREN assignment_statement expression SEMICOLON expression RPAREN LBRACE statement_list RBRACE
    (35) expression -> . expression PLUSPLUS
    (36) expression -> . expression MINUSMINUS
    (37) expression -> . PLUSPLUS expression
    (38) expression -> . MINUSMINUS expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression LT expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . VAR_INT
    (54) expression -> . VAR_FLOAT
    (55) expression -> . STRING
    (56) expression -> . ID
    (57) expression -> . TRUE
    (58) expression -> . FALSE
    (59) type -> . INT
    (60) type -> . FLOAT
    (61) type -> . BOOL
    (62) type -> . STRING
    (63) type -> . INT LBRACKET RBRACKET

    RBRACE          shift and go to state 36
    ID              shift and go to state 5
    WRITELN         shift and go to state 17
    WRITE           shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    PLUSPLUS        shift and go to state 23
    MINUSMINUS      shift and go to state 24
    NOT             shift and go to state 25
    LPAREN          shift and go to state 18
    VAR_INT         shift and go to state 26
    VAR_FLOAT       shift and go to state 27
    STRING          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    BOOL            shift and go to state 33

    statement                      shift and go to state 37
    expression_statement           shift and go to state 8
    declaration_statement          shift and go to state 9
    assignment_statement           shift and go to state 10
    print_statement                shift and go to state 11
    if_statement                   shift and go to state 12
    while_statement                shift and go to state 13
    for_statement                  shift and go to state 14
    expression                     shift and go to state 15
    type                           shift and go to state 16

state 7

    (2) statement_list -> statement .

    RBRACE          reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    WRITELN         reduce using rule 2 (statement_list -> statement .)
    WRITE           reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    PLUSPLUS        reduce using rule 2 (statement_list -> statement .)
    MINUSMINUS      reduce using rule 2 (statement_list -> statement .)
    NOT             reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    VAR_INT         reduce using rule 2 (statement_list -> statement .)
    VAR_FLOAT       reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    TRUE            reduce using rule 2 (statement_list -> statement .)
    FALSE           reduce using rule 2 (statement_list -> statement .)
    INT             reduce using rule 2 (statement_list -> statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement .)
    BOOL            reduce using rule 2 (statement_list -> statement .)


state 8

    (4) statement -> expression_statement .

    RBRACE          reduce using rule 4 (statement -> expression_statement .)
    ID              reduce using rule 4 (statement -> expression_statement .)
    WRITELN         reduce using rule 4 (statement -> expression_statement .)
    WRITE           reduce using rule 4 (statement -> expression_statement .)
    IF              reduce using rule 4 (statement -> expression_statement .)
    WHILE           reduce using rule 4 (statement -> expression_statement .)
    FOR             reduce using rule 4 (statement -> expression_statement .)
    PLUSPLUS        reduce using rule 4 (statement -> expression_statement .)
    MINUSMINUS      reduce using rule 4 (statement -> expression_statement .)
    NOT             reduce using rule 4 (statement -> expression_statement .)
    LPAREN          reduce using rule 4 (statement -> expression_statement .)
    VAR_INT         reduce using rule 4 (statement -> expression_statement .)
    VAR_FLOAT       reduce using rule 4 (statement -> expression_statement .)
    STRING          reduce using rule 4 (statement -> expression_statement .)
    TRUE            reduce using rule 4 (statement -> expression_statement .)
    FALSE           reduce using rule 4 (statement -> expression_statement .)
    INT             reduce using rule 4 (statement -> expression_statement .)
    FLOAT           reduce using rule 4 (statement -> expression_statement .)
    BOOL            reduce using rule 4 (statement -> expression_statement .)


state 9

    (5) statement -> declaration_statement .

    RBRACE          reduce using rule 5 (statement -> declaration_statement .)
    ID              reduce using rule 5 (statement -> declaration_statement .)
    WRITELN         reduce using rule 5 (statement -> declaration_statement .)
    WRITE           reduce using rule 5 (statement -> declaration_statement .)
    IF              reduce using rule 5 (statement -> declaration_statement .)
    WHILE           reduce using rule 5 (statement -> declaration_statement .)
    FOR             reduce using rule 5 (statement -> declaration_statement .)
    PLUSPLUS        reduce using rule 5 (statement -> declaration_statement .)
    MINUSMINUS      reduce using rule 5 (statement -> declaration_statement .)
    NOT             reduce using rule 5 (statement -> declaration_statement .)
    LPAREN          reduce using rule 5 (statement -> declaration_statement .)
    VAR_INT         reduce using rule 5 (statement -> declaration_statement .)
    VAR_FLOAT       reduce using rule 5 (statement -> declaration_statement .)
    STRING          reduce using rule 5 (statement -> declaration_statement .)
    TRUE            reduce using rule 5 (statement -> declaration_statement .)
    FALSE           reduce using rule 5 (statement -> declaration_statement .)
    INT             reduce using rule 5 (statement -> declaration_statement .)
    FLOAT           reduce using rule 5 (statement -> declaration_statement .)
    BOOL            reduce using rule 5 (statement -> declaration_statement .)


state 10

    (6) statement -> assignment_statement .

    RBRACE          reduce using rule 6 (statement -> assignment_statement .)
    ID              reduce using rule 6 (statement -> assignment_statement .)
    WRITELN         reduce using rule 6 (statement -> assignment_statement .)
    WRITE           reduce using rule 6 (statement -> assignment_statement .)
    IF              reduce using rule 6 (statement -> assignment_statement .)
    WHILE           reduce using rule 6 (statement -> assignment_statement .)
    FOR             reduce using rule 6 (statement -> assignment_statement .)
    PLUSPLUS        reduce using rule 6 (statement -> assignment_statement .)
    MINUSMINUS      reduce using rule 6 (statement -> assignment_statement .)
    NOT             reduce using rule 6 (statement -> assignment_statement .)
    LPAREN          reduce using rule 6 (statement -> assignment_statement .)
    VAR_INT         reduce using rule 6 (statement -> assignment_statement .)
    VAR_FLOAT       reduce using rule 6 (statement -> assignment_statement .)
    STRING          reduce using rule 6 (statement -> assignment_statement .)
    TRUE            reduce using rule 6 (statement -> assignment_statement .)
    FALSE           reduce using rule 6 (statement -> assignment_statement .)
    INT             reduce using rule 6 (statement -> assignment_statement .)
    FLOAT           reduce using rule 6 (statement -> assignment_statement .)
    BOOL            reduce using rule 6 (statement -> assignment_statement .)


state 11

    (7) statement -> print_statement .

    RBRACE          reduce using rule 7 (statement -> print_statement .)
    ID              reduce using rule 7 (statement -> print_statement .)
    WRITELN         reduce using rule 7 (statement -> print_statement .)
    WRITE           reduce using rule 7 (statement -> print_statement .)
    IF              reduce using rule 7 (statement -> print_statement .)
    WHILE           reduce using rule 7 (statement -> print_statement .)
    FOR             reduce using rule 7 (statement -> print_statement .)
    PLUSPLUS        reduce using rule 7 (statement -> print_statement .)
    MINUSMINUS      reduce using rule 7 (statement -> print_statement .)
    NOT             reduce using rule 7 (statement -> print_statement .)
    LPAREN          reduce using rule 7 (statement -> print_statement .)
    VAR_INT         reduce using rule 7 (statement -> print_statement .)
    VAR_FLOAT       reduce using rule 7 (statement -> print_statement .)
    STRING          reduce using rule 7 (statement -> print_statement .)
    TRUE            reduce using rule 7 (statement -> print_statement .)
    FALSE           reduce using rule 7 (statement -> print_statement .)
    INT             reduce using rule 7 (statement -> print_statement .)
    FLOAT           reduce using rule 7 (statement -> print_statement .)
    BOOL            reduce using rule 7 (statement -> print_statement .)


state 12

    (8) statement -> if_statement .

    RBRACE          reduce using rule 8 (statement -> if_statement .)
    ID              reduce using rule 8 (statement -> if_statement .)
    WRITELN         reduce using rule 8 (statement -> if_statement .)
    WRITE           reduce using rule 8 (statement -> if_statement .)
    IF              reduce using rule 8 (statement -> if_statement .)
    WHILE           reduce using rule 8 (statement -> if_statement .)
    FOR             reduce using rule 8 (statement -> if_statement .)
    PLUSPLUS        reduce using rule 8 (statement -> if_statement .)
    MINUSMINUS      reduce using rule 8 (statement -> if_statement .)
    NOT             reduce using rule 8 (statement -> if_statement .)
    LPAREN          reduce using rule 8 (statement -> if_statement .)
    VAR_INT         reduce using rule 8 (statement -> if_statement .)
    VAR_FLOAT       reduce using rule 8 (statement -> if_statement .)
    STRING          reduce using rule 8 (statement -> if_statement .)
    TRUE            reduce using rule 8 (statement -> if_statement .)
    FALSE           reduce using rule 8 (statement -> if_statement .)
    INT             reduce using rule 8 (statement -> if_statement .)
    FLOAT           reduce using rule 8 (statement -> if_statement .)
    BOOL            reduce using rule 8 (statement -> if_statement .)


state 13

    (9) statement -> while_statement .

    RBRACE          reduce using rule 9 (statement -> while_statement .)
    ID              reduce using rule 9 (statement -> while_statement .)
    WRITELN         reduce using rule 9 (statement -> while_statement .)
    WRITE           reduce using rule 9 (statement -> while_statement .)
    IF              reduce using rule 9 (statement -> while_statement .)
    WHILE           reduce using rule 9 (statement -> while_statement .)
    FOR             reduce using rule 9 (statement -> while_statement .)
    PLUSPLUS        reduce using rule 9 (statement -> while_statement .)
    MINUSMINUS      reduce using rule 9 (statement -> while_statement .)
    NOT             reduce using rule 9 (statement -> while_statement .)
    LPAREN          reduce using rule 9 (statement -> while_statement .)
    VAR_INT         reduce using rule 9 (statement -> while_statement .)
    VAR_FLOAT       reduce using rule 9 (statement -> while_statement .)
    STRING          reduce using rule 9 (statement -> while_statement .)
    TRUE            reduce using rule 9 (statement -> while_statement .)
    FALSE           reduce using rule 9 (statement -> while_statement .)
    INT             reduce using rule 9 (statement -> while_statement .)
    FLOAT           reduce using rule 9 (statement -> while_statement .)
    BOOL            reduce using rule 9 (statement -> while_statement .)


state 14

    (10) statement -> for_statement .

    RBRACE          reduce using rule 10 (statement -> for_statement .)
    ID              reduce using rule 10 (statement -> for_statement .)
    WRITELN         reduce using rule 10 (statement -> for_statement .)
    WRITE           reduce using rule 10 (statement -> for_statement .)
    IF              reduce using rule 10 (statement -> for_statement .)
    WHILE           reduce using rule 10 (statement -> for_statement .)
    FOR             reduce using rule 10 (statement -> for_statement .)
    PLUSPLUS        reduce using rule 10 (statement -> for_statement .)
    MINUSMINUS      reduce using rule 10 (statement -> for_statement .)
    NOT             reduce using rule 10 (statement -> for_statement .)
    LPAREN          reduce using rule 10 (statement -> for_statement .)
    VAR_INT         reduce using rule 10 (statement -> for_statement .)
    VAR_FLOAT       reduce using rule 10 (statement -> for_statement .)
    STRING          reduce using rule 10 (statement -> for_statement .)
    TRUE            reduce using rule 10 (statement -> for_statement .)
    FALSE           reduce using rule 10 (statement -> for_statement .)
    INT             reduce using rule 10 (statement -> for_statement .)
    FLOAT           reduce using rule 10 (statement -> for_statement .)
    BOOL            reduce using rule 10 (statement -> for_statement .)


state 15

    (26) expression_statement -> expression . SEMICOLON
    (35) expression -> expression . PLUSPLUS
    (36) expression -> expression . MINUSMINUS
    (39) expression -> expression . PLUS expression
    (40) expression -> expression . MINUS expression
    (41) expression -> expression . TIMES expression
    (42) expression -> expression . DIVIDE expression
    (43) expression -> expression . LT expression
    (44) expression -> expression . GT expression
    (45) expression -> expression . LTE expression
    (46) expression -> expression . GTE expression
    (47) expression -> expression . EQ expression
    (48) expression -> expression . NE expression
    (49) expression -> expression . AND expression
    (50) expression -> expression . OR expression

    SEMICOLON       shift and go to state 38
    PLUSPLUS        shift and go to state 39
    MINUSMINUS      shift and go to state 40
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    TIMES           shift and go to state 43
    DIVIDE          shift and go to state 44
    LT              shift and go to state 45
    GT              shift and go to state 46
    LTE             shift and go to state 47
    GTE             shift and go to state 48
    EQ              shift and go to state 49
    NE              shift and go to state 50
    AND             shift and go to state 51
    OR              shift and go to state 52


state 16

    (11) declaration_statement -> type . declaration_list SEMICOLON
    (12) declaration_list -> . declaration_item
    (13) declaration_list -> . declaration_list COMA declaration_item
    (14) declaration_item -> . ID
    (15) declaration_item -> . ID ASSIGN expression
    (16) declaration_item -> . ID LBRACKET expression RBRACKET ASSIGN array_initialization
    (17) declaration_item -> . ID LBRACKET expression RBRACKET
    (18) declaration_item -> . ID ASSIGN array_initialization

    ID              shift and go to state 55

    declaration_list               shift and go to state 53
    declaration_item               shift and go to state 54

state 17

    (27) print_statement -> WRITELN . LPAREN expression_list RPAREN SEMICOLON

    LPAREN          shift and go to state 56


state 18

    (52) expression -> LPAREN . expression RPAREN
    (35) expression -> . expression PLUSPLUS
    (36) expression -> . expression MINUSMINUS
    (37) expression -> . PLUSPLUS expression
    (38) expression -> . MINUSMINUS expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression LT expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . VAR_INT
    (54) expression -> . VAR_FLOAT
    (55) expression -> . STRING
    (56) expression -> . ID
    (57) expression -> . TRUE
    (58) expression -> . FALSE
